release v.1.0.0 (#4)
* Сделал сборку приложения

* Зарефачил и добавил vpn-service чтоб туда вынести всю логику по взаимодействию с x-ui

* Добавил синк пользаков

* Добавил просмотр ссылки

* Добавил просмотр ссылки

* Поправил экран оплаты и обновил бота

* Обновил продление в 3x-ui

* Обновил подписочную систему  и систему оплаты

* v1.0

---------
